--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,16 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +408,7 @@
        "[569 rows x 32 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +460,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +488,7 @@
        "Name: radius_mean, dtype: float64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +798,7 @@
        "[8 rows x 31 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +830,7 @@
        "False"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -994,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1099,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1200,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1209,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1224,9 +1226,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
     "#y = pd.Series(df.iloc[:,1].values)\n",
     "x = pd.Series(df.iloc[:,1].values)\n",
     "\n",
@@ -1241,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1251,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
